got alignment for mobile network but messed up code for desktop need to fix

--- a/awsome_project/styles.css
+++ b/awsome_project/styles.css
@@ -172,11 +172,12 @@ input[type="password"]:focus
 	{
 		vertical-align:top;
 	}
-	img
+	.td img
 	{
 		margin:auto;
-		width:95%;
+		width:90%;
 		height:50%;
+		padding: 5%;
 	}
 	#reg
 	{
